03_infrastructure/external-access/dev/traefik/ingressroute-patch-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  routes:
    - match: Host(`traefik.192.168.2.105.xip.io`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-tls
spec:
  routes:
    - match: Host(`traefik.192.168.2.105.xip.io`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: forward-auth-bouncer-admin
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-bouncer
spec:
  routes:
    - match: Host(`traefik.192.168.2.105.xip.io`)
      kind: Rule
      services:
        - name: traefik-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-bouncer-tls
spec:
  routes:
    - match: Host(`traefik.192.168.2.105.xip.io`)
      kind: Rule
      services:
        - name: traefik-gatekeeper
          port: 3000
